fix: add align-items stretch for better layout in mobile view

--- a/Assets/Css/events.css
+++ b/Assets/Css/events.css
@@ -103,6 +103,7 @@ main {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         place-items: center;
+        align-items: stretch;
         gap: 10px;
     }
 
